# mastodonScraper

./: README.md  pyproject.toml  requirements.txt  scrape.py
src/mastodon_scraper/: __init__.py  cli.py  config.py  models.py  scraper.py  utils.py
