[project]
name = "mastodon-scraper"
version = "0.1.0"
description = "A modern Python tool for scraping Mastodon content"
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "click (>=8.1.8,<9.0.0)",
    "structlog (>=25.1.0,<26.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "backoff (>=2.2.1,<3.0.0)",
    "aiohttp (>=3.11.12,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F", "B", "I"]
target-version = "py312"
